Add typed numbers nee units

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-num-bigint = {version = "0.3.0", features = ["serde"]}
+num-bigint = {version = "0.3.1", features = ["serde"]}
+bigdecimal = {version = "0.2.0", features = ["serde"]}
